#pragma once
#include "SWidget.h"
class SCompoundWidget :public SWidget{
public:
    
};